fix #26
also added a longer gazette title to test the component. I had to adapt the height of the box view.
We should truncate the text at:
Title: 85 chars
Description: 240 chars

--- a/source/sass/_gazette-item.scss
+++ b/source/sass/_gazette-item.scss
@@ -4,7 +4,7 @@
     background-color: rgba($dark-blue, .1);
     margin: 15px 0;
     padding: 20px 0 0;
-    height: 225px;
+    height: 245px;
     position: relative;
     display: block;
     text-decoration: none;
@@ -82,44 +82,4 @@
 }
 
 
-.results-list.js-is-list {
-  .medium-6 { width: 100%; } // Overiding foundation styles for this list view
-
-  .gazette-box {
-    padding: 10px 0 0;
-    margin: 5px 0;
-    text-decoration: none;
-    position: relative;
-    border-top: 1px solid rgba($dark-blue, .2);
-    height: auto;
-    background-color: transparent;
-
-    h2 {
-        font-size: 1.1rem;
-        padding: 0;
-    }
-
-    p {
-        padding: 0;
-        margin: 10px 0 5px;
-        font-size: .9rem;
-    }
-
-    &__controls {
-        background-color: transparent;
-        position: static;
-        margin: 0;
-    }
-
-    &__category { // NOTE: This might be redundant with the gazette-category
-        margin: 5px 0;
-    }
-
-    &__flag {
-        position: absolute;
-        top: 5px;
-        right: 0;
-    }
-  }
-}
 
